[wip] continued labs/v5 work
Signed-off-by: Sam Gammon <sam@elide.dev>